--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gpt-assistants-api-ui"
+name = "gpt-assistants-api-streamlit"
 version = "0.1.0"
 description = ""
 authors = ["ryo-ma <saka_ro@yahoo.co.jp>"]
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 streamlit = "^1.28.2"
 openai = "^1.3.2"
 
