--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.10"
 streamlit = "^1.28.2"
 openai = "^1.3.2"
+black = "^23.12.1"
 
 
 [tool.poetry.group.develop.dependencies]
