--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gpt-assistants-api-streamlit"
+name = "gpt-assistants-api-ui"
 version = "0.1.0"
 description = ""
 authors = ["ryo-ma <saka_ro@yahoo.co.jp>"]
@@ -7,10 +7,10 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9.8"
+python = "^3.10 || ^3.11"
 streamlit = "^1.28.2"
 openai = "^1.3.2"
-
+black = "^23.12.1"
 
 [tool.poetry.group.develop.dependencies]
 black = "^23.11.0"
